[gd_scene load_steps=4 format=3 uid="uid://dy7xv8m2j5qkt"]

[ext_resource type="PackedScene" uid="uid://c7xr8v5j2hnpt" path="res://Player.tscn" id="1_y7xmr"]
[ext_resource type="Script" uid="uid://djcj55ddverpd" path="res://scripts/GameManager.gd" id="2_game_manager"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(1280, 20)

[node name="Main" type="Node2D"]
script = ExtResource("2_game_manager")

[node name="Player" parent="." instance=ExtResource("1_y7xmr")]
position = Vector2(640, 360)

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Walls" type="StaticBody2D" parent="."]

[node name="TopWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(640, -10)
shape = SubResource("RectangleShape2D_1")

[node name="BottomWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(640, 730)
shape = SubResource("RectangleShape2D_1")

[node name="LeftWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(-10, 360)
rotation = 1.5708
shape = SubResource("RectangleShape2D_1")

[node name="RightWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(1290, 360)
rotation = 1.5708
shape = SubResource("RectangleShape2D_1")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.2, 0.3, 0.4, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="GameOverUI" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UI/GameOverUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="UI/GameOverUI/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="UI/GameOverUI/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Restart"
